syntax = "proto2";
import "google/protobuf/timestamp.proto";
import "sim/sim_debug.proto";
import "ipc/queue_test_msg.proto";
import "control/actuator_cmd.proto";
import "sensor/sbus.proto";
import "can/can.proto";
import "rigid_wing/rigid_wing.proto";

package sailbot.msg;

option cc_enable_arenas = true;

message PingMsg {
  optional float a = 1;
}

message PongMsg {
  optional float b = 1;
}

message ConnectionStatus {
  optional bool connected = 1;
}

message LogEntry {
  optional google.protobuf.Timestamp time = 1;

  // The name of all members should be the EXACT same as their corresponding
  // queue name.

  // Actually useful msgs
  optional BoatState boat_state = 500;
  optional SailCmd sail_cmd = 501;
  optional RudderCmd rudder_cmd = 502;
  optional Vector3f wind = 503;
  optional HeadingCmd heading_cmd = 504;
  optional WaypointList waypoints = 505;
  optional BallastCmd ballast_cmd = 506;
  optional RigidWingCmd rigid_wing_cmd = 507;
  optional RigidWingFeedback rigid_wing_feedback = 508;
  optional ConnectionStatus connection_status = 509;
  optional ControlMode control_mode = 510;
  optional Vector3f true_wind = 511;
  optional SailCmd manual_sail_cmd = 512;
  optional RudderCmd manual_rudder_cmd = 513;
  optional TackerState tacker_state = 514;
  optional ChallengeControl challenge_control = 515;
  optional VisionData vision_data = 516;
  optional BallastCmd manual_ballast_cmd = 517;
  optional WaypointList planner_points = 518;

  // Constants channels
  optional TackerConstants tacker_consts = 700;
  optional ControllerConstants control_consts = 701;
  optional ZeroingConstants zeroing_consts = 702;

  // Test Messages
  optional PingMsg ping = 2000;
  optional PongMsg pong = 2001;
  optional test.QueueTestMsg test_queue = 2002;

  optional SimDebugMsg sim_debug = 3000;
  optional InternalBoatState internal_state = 3001; // Will probably disappear
  optional BoatState sim_true_boat_state = 3002; // Provides the "true" state of the system
  optional Vector3f sim_true_wind = 3003; // Provides the "true" wind for the system
  optional Vector3f sim_set_wind = 3004;

  // For when running logsim:
  optional BoatState orig_boat_state = 3200;
  optional HeadingCmd orig_heading_cmd = 3201;

  optional SBUS sbus_value = 3500;

  optional can.CANMaster can126992 = 126992; // System time
  optional can.CANMaster can127250 = 127250; // Vessel heading
  optional can.CANMaster can127251 = 127251; // Rate of Turn
  optional can.CANMaster can127257 = 127257; // Attitude
  optional can.CANMaster can129025 = 129025; // Position Rapid Update
  optional can.CANMaster can129026 = 129026; // COG/SOG Rapid Update
  optional can.CANMaster can129029 = 129029; // GNSS Position Message
  optional can.CANMaster can129033 = 129033; // Time and date
  optional can.CANMaster can129539 = 129539; // GNSS DOP
  optional can.CANMaster can130306 = 130306; // Wind Data
  optional can.CANMaster can65281 = 65281; // Analog Pot
  optional can.CANMaster can65282 = 65282; // PWM Write
  optional can.CANMaster can65283 = 65283; // Debug SCAMP1
  optional can.CANMaster can65284 = 65284; // Debug SCAMP2
  optional can.CANMaster can65296 = 65296; // Sailbot State
  optional can.CANMaster can65297 = 65297; // Connection Status

}
